--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "server": "node server"
   },
   "dependencies": {
     "mirotone": "5",
@@ -13,7 +14,12 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "vite": "3.0.3",
-    "@vitejs/plugin-react": "^2.2.0"
+    "@vitejs/plugin-react": "^2.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^2.0.0",
+    "request": "^2.88.2",
+    "vite": "^3.2.7"
   }
 }
